Add sales-item join relationship
